# rust-btc-keypath-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.sample  deny.toml
.githooks/: pre-push
.github/workflows/: ci.yaml
btc_wallet/: Cargo.toml
btc_wallet/examples/: main.rs
btc_wallet/src/: backend.rs  config.rs  lib.rs  wallet.rs
examples/: cli.rs  main.rs  sample.rs
main/: Cargo.toml
main/src/: main.rs
src/: backend.rs  config.rs  electrum.rs  encdec.rs  htlc.rs  lib.rs  logger.rs  taproot.rs  wallet.rs
