[package]
name = "btc_wallet"
version = "0.0.1"
edition = "2024"
license = "MIT"

[features]
default = ["log"]
log = []
tracing = []

[dependencies]
bdk_wallet = { version = "3.1.0", features = ["rusqlite"] }
bdk_electrum = "0.24.0"

log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
argon2 = { version = "0.5.3", features = ["password-hash"] }
chacha20poly1305 = "0.10.1"
zeroize = "1.9.0"

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
hex = "0.4.3"
tempfile = "3.27.0"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
