[package]
name = "btc_wallet"
version = "0.1.0"
edition = "2024"

[features]
default = ["log"]
log = []
tracing = []

[dependencies]
bdk_wallet = { version = "3.0.0", features = ["rusqlite"] }
bdk_electrum = "0.24.0"

log = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.11.10"
tempfile = "3.27.0"
tokio = { workspace = true }
tracing-log = "0.2.0"
